# Game_Of_Life

./: .gitignore  CMakeLists.txt  LICENSE  README.md
Headers/: Common.hpp  RHI.hpp
Sources/: GameOfLife.cpp  RHI.cpp
